--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,15 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/syntax.css">
-  <link rel="stylesheet" href="css/solo.css">
-{% include head.html %}
+  <link rel="stylesheet" href="assets/vendor/normalize-css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="container">
-    <h1><a href="./">{{ site.tag_text }}</a></h1>
+{% include header.html %}
+  <div role="main" class="main">
     {{ content }}
   </div>
+{% include footer.html %}
 {% include scripts.html %}
 </body>
 </html>
