--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="header">
 			<div class="top-bar"></div>
-			<div id="logo"><img src="/assets/img/logo.svg" alt=""></div>
+			<div id="logo"><img src="/assets/img/casa_rosales_logo.svg" alt=""></div>
 		</div>
 	</div>
 </header>
