--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 				<div class="col col-1">
 					<div class="text-block">
 					<span class="heading--l">877-460-3060</span><br>
-					<a href="">info@CasaRosalesSausage.com</a><br>
+					<a href="mailto:info@casarosalessausage.com">info@CasaRosalesSausage.com</a><br>
 					1150 W. Brooks Street, Ontario, California 91762
 					</div>
 				</div>
