--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 				</div>
 				<div class="col col-1">
 					<div class="text-block">
-						Casa Rosales brand is manufactured by <a href="">Heatherfield Foods</a>.<br>
+						Casa Rosales brand is manufactured by <a href="http://villaromasausage.com/">Heatherfield Foods</a>.<br>
 						&copy; 2015 Heatherfield Foods. All Rights Reserved.
 					</div>
 				</div>
