updated footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,14 +5,14 @@
 				<div class="col col-1">
 					<div class="text-block">
 					<span class="heading--l">877-460-3060</span><br>
-					<a href="mailto:info@casarosalessausage.com">info@CasaRosalesSausage.com</a><br>
+					<a class="contact" href="mailto:info@casarosalessausage.com">info at CasaRosalesSausage.com</a><br>
 					1150 W. Brooks Street, Ontario, California 91762
 					</div>
 				</div>
 				<div class="col col-1">
 					<div class="text-block">
-						Casa Rosales brand is manufactured by <a href="http://villaromasausage.com/">Heatherfield Foods</a>.<br>
-						&copy; 2015 Heatherfield Foods. All Rights Reserved.
+						Casa Rosales brand is manufactured by <a href="http://heatherfieldfoodsinc.com/">Heatherfield Foods</a>.<br>
+						&copy; 2016 Heatherfield Foods. All Rights Reserved.
 					</div>
 				</div>
 			</div>
